--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/">
     <title>tables-for-angular dev project</title>
     <link rel="stylesheet" href="assets/styles/main.css">
 </head>
 <body>
-    <h1>Test</h1>
+    <my-app></my-app>
 </body>
 </html>
