watch/hot-reload with webpack-dev-server

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <base href="/">
     <title>tables-for-angular dev project</title>
-    <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/main.css">
 </head>
 <body>
     <my-app></my-app>
